# PytorchDemos

./: .gitignore  README.md  pyproject.toml
notebooks/: nmist_demo.ipynb
pytorch_demos/NMIST/: simple_cnn.py  simple_cnn_trainer.py  simple_fcn.py  simple_fcn_trainer.py
